# cc_algorithm

./: CMakeLists.txt  README.md  compile.sh
gtest/: GTestDevideAndConquer.cpp
hdr/: Algorithm.h  DevideAndConquer.h
src/: DevideAndConquer.cpp
